src/test/deca/syntax/invalid/sansobjet/DeclaMotReserve.deca
// DeclaIntF.deca:5:8: no viable alternative at input 'asm'
// Description: teste declaration incorrect nombre
// Resultat: erreur ligne 5: caractere speciaux  a la place d'in ident
{
    int asm;
}
